# fstk

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  rust.yml
scripts/: release.sh
src/: main.rs
src/cli/: completion.rs  list.rs  mod.rs  peek.rs  pop.rs  push.rs  remove.rs  restore.rs  tag.rs
src/db/: item.rs  mod.rs  schema.rs  tag.rs
src/fs/: file_ops.rs  mod.rs
src/utils/: display.rs  error.rs  mod.rs  numbers.rs
