[package]
name = "fstk"
version = "0.2.0"
edition = "2021"
description = "File Stack - A CLI tool for managing files and directories in a stack format"
authors = ["Wansoo Kim"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
owo-colors = "3.5"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
tabled = "0.15"
clap_complete = "4.5.46"

[dev-dependencies]
tempfile = "3.8"
